Fixed spacing issue with the arrow indicators based on the copy size

--- a/styles/services.css
+++ b/styles/services.css
@@ -84,7 +84,7 @@ section > .invite::after,
 section > .invite::before {
   content: '';
   position: absolute;
-  bottom: 100%;
+  top: -50px;
   left: 50%;
   width: 40px;
   height: 40px;
@@ -94,12 +94,12 @@ section > .invite::before {
   border-top: 2px solid white;
   border-left: 2px solid white;
   animation: animate 1.5s linear infinite;
-  opacity: 0;
+  opacity: 1;
   animation-delay: 0.25s;
 }
 
 section > .invite::before {
-  bottom: 120%;
+  top: -80px;
   animation-delay: 0.0s;
 }
 
